--- a/src/scss/props/_custom-props.scss
+++ b/src/scss/props/_custom-props.scss
@@ -8,22 +8,15 @@
     --clr-white: 0 0% 100%;
 
     // font-sizes
-    --fs-900: 9.375rem;
-    --fs-800: 6.25rem;
-    --fs-700: 3.5rem;
-    --fs-600: 2rem;
+    --fs-fluid-900: #{fluid(80px, 150px, 600px)};
+    --fs-fluid-800: #{fluid(56px, 100px, 600px)};
+    --fs-fluid-700: #{fluid(24px, 56px, 600px)};
+    --fs-fluid-600: #{fluid(16px, 32px, 600px)};
+    --fs-fluid-500: #{fluid(16px, 28px, 600px)};
     --fs-500: 1.75rem;
     --fs-400: 1.125rem;
     --fs-300: 1rem;
     --fs-200: 0.875rem;
-
-    // fluid sizes
-    --fs-fluid-base: #{fluid(16px, 18px)};
-    --fs-fluid-h5: #{fluid(20px, 24px)};
-    --fs-fluid-h4: #{fluid(24px, 32px)};
-    --fs-fluid-h3: #{fluid(28px, 42px)};
-    --fs-fluid-h2: #{fluid(32px, 56px)};
-    --fs-fluid-h1: #{fluid(40px, 76px)};
 
     // font-families
     --ff-serif: 'Bellefair', serif;
@@ -33,5 +26,8 @@
     // font-weights
     --fw-regular: 400;
     --fw-bold: 700;
+
+    // letter-spacing
+    --ls-900: #{fluid(2.7px, 4.75px, 600px)};
   }
 }
