--- a/src/scss/base/_page.scss
+++ b/src/scss/base/_page.scss
@@ -2,18 +2,13 @@
   body {
     display: grid;
     grid-template-rows: auto 1fr;
+    background-color: hsl(var(--clr-dark));
+    color: hsl(var(--clr-white));
     font-family: var(--ff-sans-cond);
     font-size: var(--fs-400);
     font-weight: var(--fw-regular);
-    line-height: 1.5;
-  }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: var(--fw-regular);
+    /* stylelint-disable-next-line number-max-precision */
+    line-height: 1.77778;
   }
 }
