--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -58,6 +58,7 @@
   h3,
   h4 {
     text-wrap: balance;
+    font-weight: 400;
   }
 
   /* A elements that don't have a class get default styles */
