--- a/src/scss/utilities/_display.scss
+++ b/src/scss/utilities/_display.scss
@@ -1,10 +1,10 @@
 @layer utilities.display {
-  .d-flex {
+  .flex {
     display: flex;
     gap: var(--gap, 1rem);
   }
 
-  .d-grid {
+  .grid {
     display: grid;
     gap: var(--gap, 1rem);
   }
