--- a/src/pages/design-system.astro
+++ b/src/pages/design-system.astro
@@ -1,20 +1,13 @@
 ---
 import Main from '@components/Main.astro'
-import Layout from '@layouts/Layout.astro'
+import NumberedTitle from '@components/NumberedTitle.astro'
+import DesignLayout from '@layouts/DesignLayout.astro'
 ---
 
-<Layout
-    title="Design system"
-    description="This is an overview of the design system"
-    image="background-home-desktop.jpg"
->
+<DesignLayout title="Design system" description="This is an overview of the design system">
     <Main>
-        <h1 class="fs-500 uppercase letter-spacing-1">Design system</h1>
-
-        <div class="flow" id="colors" style="--flow-space: 4rem">
-            <h2 class="numbered-title">
-                <span>01</span> colors
-            </h2>
+        <div class="flow" id="colors">
+            <NumberedTitle number="01" title="colors" />
 
             <div class="flex even-columns" style="--gap: 2rem; --flow-space: 1.5rem">
                 <div class="flow" style="--flow-space: 0">
@@ -62,10 +55,8 @@ import Layout from '@layouts/Layout.astro'
             </div>
         </div>
 
-        <div class="flow" id="typography" style="--flow-space: 4rem">
-            <h2 class="numbered-title">
-                <span>02</span> typography
-            </h2>
+        <div class="flow" id="typography" style="--flow-space: 6rem">
+            <NumberedTitle number="02" title="typography" />
 
             <div class="flex even-columns" style="--flow-space: 1.5rem">
                 <div class="flow">
@@ -136,12 +127,12 @@ import Layout from '@layouts/Layout.astro'
             </div>
         </div>
     </Main>
-</Layout>
+</DesignLayout>
 
 <style>
     @layer design-system {
         body {
-            padding-block: 3rem;
+            padding-block-end: 3rem;
         }
 
         .fs-450 {
