--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -4,7 +4,7 @@
   }
 
   .bg-accent {
-    background-color: hsl(var(--clr-ligth));
+    background-color: hsl(var(--clr-light));
   }
 
   .bg-white {
@@ -16,7 +16,7 @@
   }
 
   .text-accent {
-    color: hsl(var(--clr-ligth));
+    color: hsl(var(--clr-light));
   }
 
   .text-white {
