--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets'
 ---
 
 <header class="lane">
-    <a href="/">
+    <a href="/" class="radius-round">
         <Image src="/logo.svg" width={48} height={48} alt="" />
     </a>
 </header>
