--- a/src/components/SimpleHeader.astro
+++ b/src/components/SimpleHeader.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props
 
 <header class="lane">
     <div class="flex">
-        <a href="/">
+        <a href="/" class="radius-round">
             <Image src="/logo.svg" width={48} height={48} alt="" />
         </a>
         <h1 class="fs-450 uppercase letter-spacing-1">{title}</h1>
