--- a/src/pages/design-system.astro
+++ b/src/pages/design-system.astro
@@ -57,7 +57,7 @@ import DesignLayout from '@layouts/DesignLayout.astro'
         <div class="flow" id="typography" style="--flow-space: 6rem">
             <h2 class="numbered-title"><span>02</span> typography</h2>
 
-            <div class="flex even-columns" style="--flow-space: 1.5rem">
+            <div class="flex even-columns" style="--flow-space: 1.5rem; --gap:2rem">
                 <div class="flow">
                     <div>
                         <p class="text-accent">Heading 1 - Bellefair Regular - 80/150px</p>
@@ -130,29 +130,119 @@ import DesignLayout from '@layouts/DesignLayout.astro'
             <h2 class="numbered-title"><span>03</span> Interactive elements</h2>
 
             <!-- navigation -->
-            <div style="--flow-space: 1.5rem">nav</div>
+            <div class="flow" style="--flow-space: 1.5rem">
+                <nav class="demo-nav">
+                    <ul
+                        class="nav-list line-indicators flex fs-300"
+                        style="--underline-gap: 2.5rem"
+                    >
+                        <li>
+                            <a
+                                class="nav-title uppercase text-white letter-spacing-2 is-active"
+                                href="#"
+                            >
+                                <span>00</span>Active
+                            </a>
+                        </li>
+                        <li style="--_indicator-opacity: 50%">
+                            <a class="nav-title uppercase text-white letter-spacing-2" href="#">
+                                <span>01</span>Hovered
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-title uppercase text-white letter-spacing-2" href="#">
+                                <span>02</span>Idle
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <p class="text-accent text-center" style="--flow-space: 1rem">
+                    Different States of Navigation Bar
+                </p>
+            </div>
 
-            <div class="flex" style="--flow-space: 1.5rem">
-                <div class="flow">
-                    <div>
+            <div class="flex even-columns" style="align-items: flex-start; --gap: 4rem">
+                <div class="grid flow demo" style=" --gap: 1rem">
+                    <div class="flow">
                         <a href="#" class="cta uppercase">Explore</a>
-                        <p class="text-accent text-center">Landing Page Main Button - Idle</p>
+                        <p class="text-accent text-center" style="--flow-space: 0.75rem">
+                            Landing Page Main Button - Idle
+                        </p>
                     </div>
 
-                    <div class="flow" style="--flow-space: 9rem">
-                        <a href="#" class="cta uppercase" style="--_hover-size: 1.6">Explore</a>
-                        <p class="text-accent text-center" style="--flow-space: 6rem">
-                            Landing Page Main Button - Hover
-                        </p>
+                    <div class="flow" style="--flow-space: 4rem">
+                        <a href="#" class="cta uppercase" style="--_hover-size: 1.5">Explore</a>
+                        <p class="text-accent text-center">Landing Page Main Button - Hover</p>
                     </div>
                 </div>
 
-                <div>
-                    Tabs <br />
+                <div class="grid flow demo" style=" --gap: 1rem">
+                    <div class="flow">
+                        <div class="line-indicators flex fs-300" style="--gap: 2rem">
+                            <button
+                                class="uppercase text-accent letter-spacing-2"
+                                aria-selected="true"
+                            >
+                                Moon
+                            </button>
+                            <button
+                                class="uppercase text-accent letter-spacing-2"
+                                aria-selected="false"
+                                style="--_indicator-opacity: 50%"
+                            >
+                                Mars
+                            </button>
+                            <button
+                                class="uppercase text-accent letter-spacing-2"
+                                aria-selected="false"
+                            >
+                                Europa
+                            </button>
+                        </div>
+                        <p class="text-accent text-center" style="--flow-space: 1rem">
+                            Tabs (Active, Hover, & Idle)
+                        </p>
+                    </div>
 
-                     Dots <br />
+                    <div class="flow">
+                        <div class="dot-indicators flex demo">
+                            <button aria-selected="true">
+                                <span class="sr-only">Slide title</span>
+                            </button>
+                            <button aria-selected="false" style="--_indicator-opacity: 50%">
+                                <span class="sr-only">Slide title</span>
+                            </button>
+                            <button aria-selected="false">
+                                <span class="sr-only">Slide title</span>
+                            </button>
+                        </div>
+                        <p class="text-accent text-center" style="--flow-space: 1rem">
+                            Slider 1 States (Active, Hover, & Idle)
+                        </p>
+                    </div>
 
-                     Numbers
+                    <div class="flow">
+                        <div class="number-indicators grid demo">
+                            <button class="fs-fluid-600 ff-serif radius-round" aria-selected="true">
+                                1</button
+                            >
+                            <button
+                                class="fs-fluid-600 ff-serif radius-round"
+                                aria-selected="false"
+                            >
+                                2</button
+                            >
+                            <button
+                                class="fs-fluid-600 ff-serif radius-round"
+                                aria-selected="false"
+                            >
+                                3</button
+                            >
+                        </div>
+                        <p class="text-accent text-center" style="--flow-space: 1rem">
+                            Slider 2 States (Active, Hover, & Idle)
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -167,6 +257,21 @@ import DesignLayout from '@layouts/DesignLayout.astro'
 
         .fs-450 {
             font-size: 1.5rem;
+        }
+
+        .demo-nav {
+            padding-block-start: 2.5rem;
+            background-color: hsl(var(--clr-white) / 4%);
+
+            > ul {
+                --gap: clamp(1rem, -4.6rem + 22.4vw, 8rem);
+
+                justify-content: center;
+            }
+        }
+
+        .demo {
+            justify-content: center;
         }
     }
 </style>
