--- a/src/pages/design-system.astro
+++ b/src/pages/design-system.astro
@@ -139,18 +139,18 @@ import DesignLayout from '@layouts/DesignLayout.astro'
                         <li>
                             <a
                                 class="nav-title uppercase text-white letter-spacing-2 is-active"
-                                href="#"
+                                href="/"
                             >
                                 <span>00</span>Active
                             </a>
                         </li>
                         <li style="--_indicator-opacity: 50%">
-                            <a class="nav-title uppercase text-white letter-spacing-2" href="#">
+                            <a class="nav-title uppercase text-white letter-spacing-2" href="/">
                                 <span>01</span>Hovered
                             </a>
                         </li>
                         <li>
-                            <a class="nav-title uppercase text-white letter-spacing-2" href="#">
+                            <a class="nav-title uppercase text-white letter-spacing-2" href="/">
                                 <span>02</span>Idle
                             </a>
                         </li>
@@ -164,14 +164,14 @@ import DesignLayout from '@layouts/DesignLayout.astro'
             <div class="flex even-columns" style="align-items: flex-start; --gap: 4rem">
                 <div class="grid flow demo" style=" --gap: 1rem">
                     <div class="flow">
-                        <a href="#" class="cta uppercase">Explore</a>
+                        <a href="/" class="cta uppercase">Explore</a>
                         <p class="text-accent text-center" style="--flow-space: 0.75rem">
                             Landing Page Main Button - Idle
                         </p>
                     </div>
 
                     <div class="flow" style="--flow-space: 4rem">
-                        <a href="#" class="cta uppercase" style="--_hover-size: 1.5">Explore</a>
+                        <a href="/" class="cta uppercase" style="--_hover-size: 1.5">Explore</a>
                         <p class="text-accent text-center">Landing Page Main Button - Hover</p>
                     </div>
                 </div>
