--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,7 @@ import { Image } from 'astro:assets'
 <header class="lane">
     <a href="/" class="radius-round">
         <Image src="/logo.svg" width={48} height={48} alt="" />
+        <span class="sr-only">Back to homepage</span>
     </a>
 </header>
 
