--- a/src/components/SimpleHeader.astro
+++ b/src/components/SimpleHeader.astro
@@ -12,6 +12,7 @@ const { title } = Astro.props
     <div class="flex">
         <a href="/" class="radius-round">
             <Image src="/logo.svg" width={48} height={48} alt="" />
+            <span class="sr-only">Back to homepage</span>
         </a>
         <h1 class="fs-450 uppercase letter-spacing-1">{title}</h1>
     </div>
