added navigation and layout

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,3 +1,9 @@
-<main class="lane flow">
+<main class="grid-layout">
     <slot />
 </main>
+
+<style>
+    main {
+        grid-column: main;
+    }
+</style>
