--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,21 +1,40 @@
 ---
 import { Image } from 'astro:assets'
+import Navigation from './Navigation.astro'
 ---
 
-<header class="lane">
-    <a href="/" class="radius-round">
+<header>
+    <a href="/" class="logo">
         <Image src="/logo.svg" width={48} height={48} alt="" />
         <span class="sr-only">Back to homepage</span>
     </a>
+
+    <Navigation />
 </header>
 
 <style lang="scss">
-    a {
-        justify-self: self-start;
+    header {
+        display: grid;
+        grid-template-columns: subgrid;
+        grid-column: fullbleed;
+        align-items: center;
+        overflow: hidden;
 
-        @media (width >= 81.375em) {
-            grid-column: 1;
-            justify-self: center;
+        @media (--for-tablet-l-up) {
+            margin-block-start: 2.5rem;
+        }
+    }
+
+    .logo {
+        grid-column: 1;
+        display: grid;
+        place-items: center;
+        inline-size: calc(var(--logo-size) + (var(--site-spacing) * 2));
+        margin-inline: auto;
+
+        > img {
+            inline-size: var(--logo-size);
+            block-size: var(--logo-size);
         }
     }
 </style>
